# grace-framework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
artifacts/: repo_root_graph.json
docs/: adapter_authoring.md  adapter_compatibility.md  adapter_probe.md  agent_contract.md  agent_playbook.md  bootstrap_layer.md  bootstrap_safety.md  construct_packs.md  external_specs.md  file_policy.md  go_adapter.md  graph_query_layer.md  impact_layer.md  language_adapter_contract.md  language_integration.md  language_packs.md  patch_semantics.md  path_query.md  planning_layer.md  polyglot_annotations.md  protocol_freeze.md  read_layer.md  release_criteria.md  roadmap.md  self_hosting.md  technical_debt.md  typescript_adapter.md  universal_language_integration.md  v1_invariants.md  v1_readiness_review.md  v1_release_notes.md  v1_release_notes_draft.md  v1_release_prep.md
grace/: __init__.py  adapter_command.py  adapter_tools.py  artifact_hygiene.py  bootstrap_command.py  bootstrap_safety.py  bootstrapper.py  clean_command.py  cli.py  construct_pack.py  construct_registry.py  fallback_adapter.py  file_policy.py  go_adapter.py  grammar_command.py  grammar_manager.py  graph.py  impact.py  io.py  language_adapter.py  language_pack.py  linter.py  map.py  models.py  parser.py  patcher.py  path_query.py  plan.py  planner.py  python_adapter.py  query.py  read.py  repo_config.py  spec_loader.py  spec_registry.py  tree_sitter_adapter.py  treesitter_base.py  typescript_adapter.py  validation.py  validator.py
schemas/: belief.schema.json  contract.schema.json  graph.schema.json
(+87 files in other folders)
