[project]
name = "grace-framework"
version = "0.1.0"
description = "GRACE v1 code-first reference implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "GRACE contributors" },
]
dependencies = [
    "click>=8,<9",
    "pydantic>=2,<3",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
]
keywords = ["grace", "llm", "rag", "code-engineering", "semantic-anchors"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
grace = "grace.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
